[gd_scene load_steps=7 format=3 uid="uid://cqvjb6xnakhjb"]

[ext_resource type="Script" path="res://scenes/TrashCanProjectile.gd" id="1_ma34s"]
[ext_resource type="Texture2D" uid="uid://cyqcshvgf0nq8" path="res://graphics/world/trashcan6.png" id="2_hin5c"]
[ext_resource type="PackedScene" uid="uid://bp8but72y4o55" path="res://scenes/explosion_particles.tscn" id="2_vcfeg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cu6db"]
radius = 38.0
height = 112.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4oemq"]
radius = 26.0
height = 86.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yg3ek"]
radius = 290.062

[node name="TrashCanProjectile" type="RigidBody2D"]
collision_layer = 0
gravity_scale = 0.0
script = ExtResource("1_ma34s")
initial_angular_velocity = 15.0
particles_scene = ExtResource("2_vcfeg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-10, 3)
texture = ExtResource("2_hin5c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_cu6db")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4oemq")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_yg3ek")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
